...
        app:tabIndicatorColor="@android:color/white"
        app:tabTextColor="@android:color/white"
        app:tabTextAppearance="@style/customfontstyle_regular"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
...
